@@ -1,3 +1,9 @@
+2005-08-27  Chia I Wu  <b90201047@ntu.edu.tw>
+
+	* src/core/font.cpp (CFont::RecalculateMetrics):
+	Recalculate metrics only when face is scalable. Reported by
+	wilkins@ptt.
+
 2005-08-25  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>
 
 	* src/mainframe.cpp,
